# cosmos_reason

./: .gitignore  =4.8.0  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
app/: config.py  image_utils.py  llama_client.py  main.py  video_utils.py
app/static/: app.js  index.html  styles.css
scripts/: download_models.sh  start_llama_server.sh
specs/001-multimodal-inference-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multimodal-inference-app/checklists/: requirements.md
specs/001-multimodal-inference-app/contracts/: api.md
tests/: test_api.py  test_llama_client.py  test_validation.py  test_video_utils.py
